# falcon-messenger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
examples/: curl_example.sh  python_client.py
falcon_messenger/: __init__.py  __main__.py  config.py  models.py  recommendations.py  server.py
falcon_messenger/formatters/: __init__.py  base.py  super_signal.py
falcon_messenger/publishers/: __init__.py  base.py  bluesky.py  discord.py
tests/: __init__.py  conftest.py  test_bluesky.py  test_discord.py  test_server.py
