[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falcon-messenger"
version = "0.1.0"
description = "Webhook/API server for publishing messages to Bluesky and Discord"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TradingAsBuddies"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "atproto>=0.0.30",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
]

[project.scripts]
falcon-messenger = "falcon_messenger.__main__:main"

[project.urls]
Homepage = "https://github.com/TradingAsBuddies/falcon-messenger"
Repository = "https://github.com/TradingAsBuddies/falcon-messenger"
Issues = "https://github.com/TradingAsBuddies/falcon-messenger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["falcon_messenger*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
